# prosperous-hooks

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md
client/: Cargo.toml
client/locales/: ar.yml  en.yml  es.yml  hi.yml  zh.yml
client/src/: client.rs  lib.rs  locale.rs  main.rs
mock_server/: Cargo.toml
mock_server/src/: lib.rs  main.rs
mock_server/tests/: e2e.rs
node_client/: Cargo.toml  binding.gyp  index.js  package-lock.json  package.json  pnpm-lock.yaml
node_client/addon/: addon.cc
node_client/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
