[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1", features = ["http1", "client"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "tokio"] }
http-body-util = "0.1"
bytes = "1"
tokio = { version = "1", features = ["full"] }
