[package]
name = "mock_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"

[dev-dependencies]
client = { path = "../client" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
